# delega-python

./: LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: REVIEW_BOT_TEST.md
.github/workflows/: ci.yml  publish.yml
src/delega/: __init__.py  _http.py  _version.py  async_client.py  client.py  exceptions.py  models.py  webhooks.py
tests/: test_client.py  test_webhooks.py
