[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delega"
version = "0.1.1"
description = "Official Python SDK for the Delega API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Delega", email = "support@delega.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["delega", "api", "sdk", "task-management", "delegation"]

[project.optional-dependencies]
async = ["httpx>=0.27"]

[project.urls]
Homepage = "https://delega.dev"
Documentation = "https://docs.delega.dev"
Repository = "https://github.com/delega-dev/delega-python"
Issues = "https://github.com/delega-dev/delega-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/delega"]
